--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@color/md_theme_primary"
-        android:endColor="@color/md_theme_primaryContainer"
-        android:angle="135"
-        android:type="linear" />
+        android:startColor="@color/colorBackgroundStart"
+        android:endColor="@color/colorBackgroundEnd"
+        android:angle="270" />
 </shape>
 
