--- a/app/src/main/res/layout/item_suggestion_outgoing.xml
+++ b/app/src/main/res/layout/item_suggestion_outgoing.xml
@@ -24,7 +24,7 @@
 
         <!-- Message Bubble -->
         <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             app:cardCornerRadius="18dp"
@@ -32,7 +32,7 @@
             app:cardBackgroundColor="@color/bubbleOutgoing">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="12dp"
