--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -180,8 +180,8 @@
                         </LinearLayout>
                         <View
                             android:layout_width="match_parent"
-                            android:layout_height="0.1dp"
-                            android:background="?attr/colorOnSurfaceVariant" />
+                            android:layout_height="0.5dp"
+                            android:background="@drawable/gradient_separator"  />
                         <LinearLayout
                             android:id="@+id/item_language"
                             android:layout_width="match_parent"
@@ -267,8 +267,8 @@
                         </LinearLayout>
                         <View
                             android:layout_width="match_parent"
-                            android:layout_height="0.1dp"
-                            android:background="?attr/colorOnSurfaceVariant" />
+                            android:layout_height="0.5dp"
+                            android:background="@drawable/gradient_separator"  />
                         <LinearLayout
                             android:id="@+id/item_new_announcements"
                             android:layout_width="match_parent"
@@ -290,6 +290,10 @@
                                 android:layout_height="wrap_content"
                                 android:checked="true" />
                         </LinearLayout>
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:background="@drawable/gradient_separator"  />
                         <LinearLayout
                             android:id="@+id/item_event_reminders"
                             android:layout_width="match_parent"
@@ -313,8 +317,8 @@
                         </LinearLayout>
                         <View
                             android:layout_width="match_parent"
-                            android:layout_height="0.1dp"
-                            android:background="?attr/colorOnSurfaceVariant" />
+                            android:layout_height="0.5dp"
+                            android:background="@drawable/gradient_separator"  />
                         <LinearLayout
                             android:id="@+id/item_new_event_postings"
                             android:layout_width="match_parent"
@@ -338,8 +342,8 @@
                         </LinearLayout>
                         <View
                             android:layout_width="match_parent"
-                            android:layout_height="0.1dp"
-                            android:background="?attr/colorOnSurfaceVariant" />
+                            android:layout_height="0.5dp"
+                            android:background="@drawable/gradient_separator"  />
                         <LinearLayout
                             android:id="@+id/item_suggestion_updates"
                             android:layout_width="match_parent"
