--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -80,25 +80,18 @@
                 android:orientation="vertical"
                 android:gravity="center">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="30dp"
-                    app:cardElevation="4dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="16dp">
+
 
                     <!-- Profile image -->
                     <com.google.android.material.imageview.ShapeableImageView
                         android:id="@+id/profile_image"
                         android:layout_width="160dp"
                         android:layout_height="160dp"
+                        app:shapeAppearanceOverlay="@style/CircularImage"
                         android:padding="0dp"
                         android:contentDescription="@string/alex_johnson"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/profile">
+                        android:scaleType="centerCrop">
                     </com.google.android.material.imageview.ShapeableImageView>
-                </androidx.cardview.widget.CardView>
 
 
                 <!-- User role -->
