--- a/app/src/main/res/layout/fragment_announcement.xml
+++ b/app/src/main/res/layout/fragment_announcement.xml
@@ -131,9 +131,22 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="20dp"
+        app:shapeAppearanceOverlay="@style/CircularImage"
         android:layout_marginBottom="20dp"
         android:contentDescription="Add Announcement"
         app:srcCompat="@drawable/ic_add_24"
          />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_ai"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="100dp"
+        android:contentDescription="Add Announcement"
+        app:shapeAppearanceOverlay="@style/CircularImage"
+        app:srcCompat="@drawable/ic_robot"
+        />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
