Implement alarm and reminder functionality

--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -29,7 +29,7 @@
 
                 <!-- Event Title -->
                 <TextView
-                    android:id="@+id/title"
+                    android:id="@+id/eventTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Event Title"
@@ -55,7 +55,7 @@
 
                         <!-- Location -->
                         <TextView
-                            android:id="@+id/location"
+                            android:id="@+id/eventDate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="5dp"
@@ -65,7 +65,7 @@
 
                         <!-- Time -->
                         <TextView
-                            android:id="@+id/start_time"
+                            android:id="@+id/eventTime"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Start time"
