--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -90,7 +90,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:padding="16dp"
+            android:padding="8dp"
+            android:clipToPadding="false"
             android:visibility="gone">
 
             <androidx.recyclerview.widget.RecyclerView
