--- a/app/src/main/res/drawable/ic_done_all.xml
+++ b/app/src/main/res/drawable/ic_done_all.xml
@@ -3,9 +3,13 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportHeight="24"
+    android:tint="?attr/colorOnSurface">
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M18,7l-1.41,-1.41 -6.34,6.34 1.41,1.41L18,7zM22.24,5.59L11.66,16.17 7.48,12l-1.41,1.41L11.66,19l12,-12L22.24,5.59zM0.41,13.41L6,19l1.41,-1.41L1.83,12L0.41,13.41z"/>
+        android:fillColor="@android:color/white"
+        android:pathData="M20,6L9,17l-5,-5l1.41,-1.41L9,14.17l9.59,-9.58L20,6z"/>
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M20,6L9,17l-5,-5l1.41,-1.41L9,14.17l9.59,-9.58L20,6z"/>
 </vector>
 
