--- a/app/src/main/res/drawable/ic_picture_as_pdf.xml
+++ b/app/src/main/res/drawable/ic_picture_as_pdf.xml
@@ -5,8 +5,8 @@
     android:viewportWidth="24"
     android:viewportHeight="24"
     android:tint="?attr/colorOnSurface">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M20,2H8c-1.1,0 -2,0.9 -2,2v12c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2V4c0,-1.1 -0.9,-2 -2,-2zM11.5,9.5c0,0.83 -0.67,1.5 -1.5,1.5H9v2H7.5V7H10c0.83,0 1.5,0.67 1.5,1.5v1zM16.5,11.5c0,0.83 -0.67,1.5 -1.5,1.5h-2V7h2c0.83,0 1.5,0.67 1.5,1.5v3zM20.5,8.5H19V7h1.5V5.5H19V7h-1.5v1.5H19V10h1.5V8.5zM9,9.5h1v-1H9V9.5zM13.5,10.5h1v-2h-1V10.5z"/>
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M7,14H5v5h5v-2H7v-3zM5,10h2V7h3V5H5v5zM17,17h-3v2h5v-5h-2v3zM14,5v2h3v3h2V5h-5z"/>
 </vector>
 
