--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -102,7 +102,7 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="4dp"
                     android:fontFamily="@font/jakarta_medium"
-                    android:text="@string/user_role"
+                    android:text=""
                     android:textColor="@android:color/darker_gray"
                     android:textSize="20sp" />
 
@@ -151,7 +151,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
-                        android:text="@string/alex_johnson"
+                        android:text=""
                         android:textSize="16sp"
                         android:fontFamily="@font/jakarta_bold"
                         android:textColor="?attr/colorOnSurface"
@@ -214,7 +214,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
-                        android:text="@string/course"
+                        android:text=""
                         android:textSize="16sp"
                         android:fontFamily="@font/jakarta_bold"
                         android:textColor="?attr/colorOnSurface"
